# internal/rest/requests/login_by_email.go
@@ -15,7 +15,7 @@ func LoginByEmail(r *http.Request) (req resources.LoginByEmail, err error) {
 	}
 
 	errs := validation.Errors{
-		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("login_by_email")),
+		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("account_session")),
 		"data/attributes": validation.Validate(req.Data.Attributes, validation.Required),
 	}
 	return req, errs.Filter()
