# internal/rest/requests/login_by_username.go
@@ -15,7 +15,7 @@ func LoginByUsername(r *http.Request) (req resources.LoginByUsername, err error)
 	}
 
 	errs := validation.Errors{
-		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("login_by_username")),
+		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("account_session")),
 		"data/attributes": validation.Validate(req.Data.Attributes, validation.Required),
 	}
 	return req, errs.Filter()
