# internal/rest/requests/refresh_session.go
@@ -15,7 +15,7 @@ func RefreshSession(r *http.Request) (req resources.RefreshSession, err error) {
 	}
 
 	errs := validation.Errors{
-		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("refresh_account_session")),
+		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("account_session")),
 		"data/attributes": validation.Validate(req.Data.Attributes, validation.Required),
 	}
 	return req, errs.Filter()
