# internal/rest/requests/registration.go
@@ -15,7 +15,7 @@ func Registration(r *http.Request) (req resources.Registration, err error) {
 	}
 
 	errs := validation.Errors{
-		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("registration_account")),
+		"data/type":       validation.Validate(req.Data.Type, validation.Required, validation.In("account")),
 		"data/attributes": validation.Validate(req.Data.Attributes, validation.Required),
 		"data/attributes/email": validation.Validate(
 			req.Data.Attributes.Email, validation.Required, validation.Length(5, 255),
